Enable JWT in simple controller.
